--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ main {
 }
 .side-img {
 	width: 55%;
-	background-image: url(../images/bg-pattern-desktop.svg);
+	background-image: url("../images/bg-pattern-desktop.svg");
 	background-position-x: 100%;
 	background-position-y: 70%;
 	position: relative;
@@ -142,7 +142,7 @@ input[type="radio"]:checked + label + p {
 	}
 	.side-img {
 		width: auto;
-		background-image: url(../images/bg-pattern-mobile.svg);
+		background-image: url("../images/bg-pattern-mobile.svg");
 		place-self: center;
 		background-size: 100%;
 		background-repeat: no-repeat;
